--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,10 @@ jobs:
 
       - name: Build artifact
         run: make
-        
-      - name: Tag
-        run: |
-          git tag "v$env:GitVersion_SemVer"
-          git push origin "v$env:GitVersion_SemVer"
 
       - name: Create release
         uses: softprops/action-gh-release@v1
         with:
-          files: '*.alfredworkflow'
+          files: 'out/*.alfredworkflow'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
